--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Jesse Kuntz <jessekuntz96@gmail.com>",
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.4.34",
@@ -12,9 +14,11 @@
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
     "gatsby-source-filesystem": "^2.3.34",
+    "gatsby-source-graphql": "^2.7.6",
     "gatsby-transformer-sharp": "^2.5.17",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "smoothscroll-polyfill": "^0.4.4"
