--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Jesse Kuntz <jessekuntz96@gmail.com>",
   "dependencies": {
     "apollo-boost": "^0.4.9",
+    "clipboard-polyfill": "^3.0.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
