--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "version": "0.1.0",
   "author": "Jesse Kuntz <jessekuntz96@gmail.com>",
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "apollo-boost": "^0.4.9",
     "clipboard-polyfill": "^3.0.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.79",
     "gatsby-image": "^2.4.21",
+    "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-manifest": "^2.4.34",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-react-helmet": "^3.3.14",
@@ -17,6 +19,7 @@
     "gatsby-source-filesystem": "^2.3.34",
     "gatsby-source-graphql": "^2.7.6",
     "gatsby-transformer-sharp": "^2.5.17",
+    "isomorphic-fetch": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-apollo": "^3.1.5",
@@ -37,8 +40,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop -H 0.0.0.0",
+    "build": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby build",
+    "develop": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
