--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby build",
-    "develop": "GATSBY_EXPERIMENTAL_ROUTING_APIS=1 gatsby develop -H 0.0.0.0",
+    "build": "gatsby build",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
