--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "smoothscroll-polyfill": "^0.4.4"
+    "smoothscroll-polyfill": "^0.4.4",
+    "vanilla-lazyload": "^17.3.0"
   },
   "devDependencies": {
     "eslint": "^7.11.0",
