--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "eslint": "^7.11.0",
+    "eslint-config-groupon": "^10.0.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
