--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "lint": "eslint src --fix"
+    "lint": "eslint . --fix"
   },
   "repository": {
     "type": "git",
