--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "if-they-were-this",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A celebrity quiz game!",
   "version": "0.1.0",
   "author": "Jesse Kuntz <jessekuntz96@gmail.com>",
   "dependencies": {
