--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-apollo": "^3.0.2",
     "gatsby-plugin-manifest": "^2.4.34",
+    "gatsby-plugin-netlify": "~5.1.1",
     "gatsby-plugin-offline": "^3.2.33",
     "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sharp": "^2.6.42",
